Fix hero on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ li {
   padding: 120px 0;
 }
 .portrait {
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+  max-width: 150px;
   box-shadow: 0px 0px 100px rgba(255, 255, 255, .4);
 }
 .name {
@@ -94,8 +98,7 @@ li {
   justify-content: space-between;
 }
 .bottom-bar .link-list {
-  display: flex;
-  justify-content: space-between;
+  display: none;
 }
 .bottom-bar .link-list li {
   margin-right: 25px;
@@ -215,10 +218,11 @@ footer {
   }
 
   .portrait {
-    border-radius: 50%;
-    display: block;
-    margin: 0 auto;
     max-width: 180px;
+  }
+  .bottom-bar .link-list {
+    display: flex;
+    justify-content: space-between;
   }
 
   .title--size-large {
